# BACOREX-SARL

./: 0004_auto_20230615_1612.py  README.md  build.sh  create_db.sql  create_superuser.py  manage.py  pyproject.toml  reinitialisation_db.sh  requirements.txt
BACOREX_SARL/: asgi.py  reinitialisation_db.sh  ressource  settings.py  urls.py  views.py  wsgi.py
BACOREX_SARL/BACOREX_SARL/: asgi.py  settings.py  urls.py  views.py
BACOREX_SARL/dao/: forms.py  models.py  urls.py  views.py
BACOREX_SARL/gestioncouriers/: forms.py  models.py  urls.py  views.py
BACOREX_SARL/gestiondesstock/: forms.py  models.py  urls.py  views.py
BACOREX_SARL/gestionprojets/: forms.py  models.py  urls.py  views.py
BACOREX_SARL/templates/: base.html  home.html
BACOREX_SARL/userprofile/: admin.py  forms.py  models.py  urls.py  views.py
dao/: forms.py  models.py  urls.py  views.py
dao/migrations/: 0001_initial.py
gestioncouriers/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
gestioncouriers/migrations/: 0001_initial.py  0002_initial.py  0003_message_date_lecture_message_fil_de_discussion_and_more.py  0004_document_remove_message_recepteur_message_recepteurs_and_more.py  0006_message_projet_messagepredefini.py  (+4 more)
gestiondesstock/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
gestionprojets/: apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
history/: models.py  urls.py  views.py
plannig/: apps.py  models.py  urls.py  utils.py  views.py
userprofile/: admin.py  forms.py  models.py  urls.py  views.py
(+122 files in other folders)
